--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
-os:
-  - linux
-  - osx
-
 # Ubuntu 14.04 Trusty support, to get newer cmake and compilers.
 sudo: required
 dist: trusty
 
 language: cpp
 
-script:
-  - mkdir out && cd out && cmake -DGFLAGS_BUILD_TESTING=True .. && make && ctest
+os:
+  - linux
+  - osx
 
 compiler:
   - clang
   - gcc
+
+env:
+  - CONFIG=Release
+  - CONFIG=Debug
+
+script:
+  - mkdir out && cd out && cmake -D CMAKE_BUILD_TYPE=$CONFIG -D GFLAGS_BUILD_SHARED_LIBS=ON -D GFLAGS_BUILD_STATIC_LIBS=ON -D GFLAGS_BUILD_TESTING=ON .. && cmake --build . --config $CONFIG && ctest
