fix: Copy missing IMPORTED_IMPLIB_<CONFIG> gflags target property

--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -121,6 +121,7 @@ if (NOT TARGET @PACKAGE_NAME@)
   get_target_property (_@PACKAGE_PREFIX@_CONFIGURATIONS ${@PACKAGE_PREFIX@_TARGET} IMPORTED_CONFIGURATIONS)
   set_target_properties (@PACKAGE_NAME@ PROPERTIES IMPORTED_CONFIGURATIONS "${_@PACKAGE_PREFIX@_CONFIGURATIONS}")
   foreach (_@PACKAGE_PREFIX@_PROPERTY_NAME IN ITEMS
+    IMPLIB
     LOCATION
     LINK_DEPENDENT_LIBRARIES
     LINK_INTERFACE_LIBRARIES
