--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -350,8 +350,8 @@ set (PRIVATE_HDRS
 
 set (GFLAGS_SRCS
   "gflags.cc"
-  "gflags_reporting.cc"
-  "gflags_completions.cc"
+  "reporting.cc"
+  "completions.cc"
 )
 
 if (OS_WINDOWS)
